@@ -12,7 +12,7 @@ jortho-1.0-2
 kodkodi-1.5.2-1
 nunchaku-0.5
 opam-1.2.2
-polyml-test-8fda4fd22441
+polyml-5.8-20190220
 postgresql-42.2.5
 scala-2.12.8
 smbc-0.4.1
